plugins/kotlin/idea/tests/testData/checker/codeFragments/privateMembers.kt.fragment
a.<error descr="[INVISIBLE_MEMBER]">ensureCapacityInternal</error>(0)